<resources>
    <string name="app_name">Login</string>
    <string name="tAptk">APOTEK SEHAT</string>
    <string name="eEmail">Email</string>
    <string name="ePwd">Password</string>
    <string name="btn">MASUK</string>
    <string name="tLOGIN">LOGIN MASUK</string>
    <string name="talamat">Plaju, Palembang, Sumatra Selatan </string>
    <string name="tslogan">ANDA SEHAT KAMI SENANG :)</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="eNama">Masukan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihat">Lihat Data</string>
    <string name="editdata">Edit Data </string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Kontak</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>


    <style name="appName" parent="Theme.AppCompat.NoActionBar"></style>
</resources>